<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Camera2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_take_photo">Tomar foto</string>
    <string name="changeCamera">Cambiar de camara</string>
    <string name="changeColor">Cambiar Color</string>
    <string name="changeResolution">Cambiar Resolución</string>
    <string name="changeEfect">Cambiar Efecto</string>

</resources>
